--- a/package.json
+++ b/package.json
@@ -1,45 +1,37 @@
 {
-  "name": "todo-list",
-  "version": "1.0.0",
-  "main": "tailwind.config.js",
+  "name": "nest-clean",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "start": "webpack serve --config ./webpack.config.js --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
-  },
-  "author": "vitormalencar",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "autoprefixer": "^10.4.7",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.5",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.14",
-    "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^7.7.1",
-    "style-loader": "^3.3.1",
-    "svg-inline-loader": "^0.8.2",
-    "svg-url-loader": "^7.1.1",
-    "tailwindcss": "^3.1.8",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "save-dev": "^0.0.1-security"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/manogui777/todo-web-master.git"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/manogui777/todo-web-master/issues"
-  },
-  "homepage": "https://github.com/manogui777/todo-web-master#readme",
-  "description": ""
+  "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.3.1",
+    "eslint": "^8.48.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
+  }
 }
