--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nest-clean",
+  "name": "forum",
   "version": "1.0.0",
   "description": "",
-  "author": "",
+  "author": "Guilherme David",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
