--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:docker@localhost:5432/nest-clean?schema=public"
+DATABASE_URL="postgresql://postgres:docker@localhost:5432/forum?schema=public"
 
 PORT="3333"
 
