--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,21 @@ version: '3.8'
 
 services:
   postgres:
-    container_name: nest-clean-pg
+    container_name: forum-pg
     image: postgres
     ports:
       - 5432:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
-      POSTGRES_DB: nest-clean
+      POSTGRES_DB: forum
       PGDATA: /data/postgres
     volumes:
       - ./data/pg:/data/postgres
+  cache:
+    container_name: forum-cache
+    image: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - ./data/redis:/data
