--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       POSTGRES_PASSWORD: docker
       POSTGRES_DB: forum
       PGDATA: /data/postgres
-    volumes:
-      - ./data/pg:/data/postgres
+    # volumes:
+    #   - ./data/pg:/data/postgres
   cache:
     container_name: forum-cache
     image: redis
     ports:
       - 6379:6379
-    volumes:
-      - ./data/redis:/data
+    # volumes:
+    #   - ./data/redis:/data
