--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,12 @@ services:
       - 6379:6379
     # volumes:
     #   - ./data/redis:/data
+  api:
+    build:
+      context: .
+    container_name: forum-api
+    ports:
+      - 3333:3333
+    depends_on:
+      - postgres
+      - cache
