--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build and Push
     runs-on: ubuntu-latest
 
+  steps:
     - uses: pnpm/action-setup@v4
       name: Install pnpm
       with:
