--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Generate prisma client
+        run: pnpm prisma generate
+
       - name: Run unit tests
         run: pnpm test
 
