--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,25 @@ jobs:
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build docker image
-        run: docker build -t forum-api:${{ steps.generate_tag.outputs.sha }} .
+        run: |
+          docker build \
+            -t imanogui/forum-api:${{ steps.generate_tag.outputs.sha }} . \
+            --build-arg PORT=${{ secrets.PORT }} \
+            --build-arg REDIS_HOST=${{ secrets.REDIS_HOST }} \
+            --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} \
+            --build-arg JWT_PRIVATE_KEY=${{ secrets.JWT_PRIVATE_KEY }} \
+            --build-arg JWT_PUBLIC_KEY=${{ secrets.JWT_PUBLIC_KEY }} \
+            --build-arg CLOUDFLARE_ACCOUNT_ID=${{ secrets.CLOUDFLARE_ACCOUNT_ID }} \
+            --build-arg AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
+            --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Push docker image
+        run: docker push imanogui/forum-api:${{ steps.generate_tag.outputs.sha }}
