--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     container_name: forum-api
     ports:
       - 3333:3333
+    env_file:
+      - .env
     depends_on:
       - postgres
       - cache
