--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,16 +40,18 @@ jobs:
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      
+      - name: Log in to DigitalOcean Container Registry
+        run: doctl registry login --expiry-seconds 1200
 
       - name: Build and push action
         uses: docker/build-push-action@v6
         with:
           push: true
           tags: |
-            imanogui/forum-api:${{ steps.generate_tag.outputs.sha }}
-            imanogui/forum-api:latest
+            ${{ secrets.REGISTRY_NAME }}/forum-api:${{ steps.generate_tag.outputs.sha }}
+            ${{ secrets.REGISTRY_NAME }}/forum-api:latest
