--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,26 +12,16 @@ services:
       POSTGRES_DB: forum
     volumes:
       - pg_data:/var/lib/postgresql/data
-  cache:
-    container_name: forum-cache
-    image: bitnami/redis:7.0.15
-    ports:
-      - 6379:6379
-    environment:
-      REDIS_PASSWORD: password123
-    volumes:
-      - cache_data:/data
-  api:
-    build:
-      context: .
-    container_name: forum-api
-    ports:
-      - 3333:3333
-    env_file:
-      - .env
-    depends_on:
-      - postgres
-      - cache
+
+  # api:
+  #   build:
+  #     context: .
+  #   container_name: forum-api
+  #   ports:
+  #     - 3333:3333
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     - postgres
 volumes:
   pg_data:
-  cache_data:
