--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@prisma/client": "^5.2.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.9",
-    "ioredis": "^5.3.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -61,5 +60,13 @@
     "unplugin-swc": "^1.3.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.2"
+  },
+  "eslintConfig": {
+    "extends": "@rocketseat/eslint-config/node",
+    "rules": {
+      "no-useless-constructor": "off",
+      "no-new": "off",
+      "no-useless-return": "off"
+    }
   }
 }
