--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "types": [
-      "vitest/globals",
-      "multer"
-    ]
+    "types": ["vitest/globals"]
   }
 }
